--- a/20200311 Grids/styles.css
+++ b/20200311 Grids/styles.css
@@ -4,14 +4,10 @@ body {
   font-family: sans-serif;
 }
 
-p, h4 {
-    text-align: center;
-    font-weight: normal;
-    margin: 5px;
-}
-
 h4 {
+  text-align: center;
   font-weight: bolder;
+  margin: 10px;
 }
 
 hr {
@@ -23,20 +19,27 @@ hr {
 }
 
 p {
+  text-align: center;
   font-size: 13px;
   padding: 10px;
   color: grey;
+  margin: 10px;
 }
 
 .menu {
    display: flex;
    justify-content:space-between;
+   align-items: center;
 }
 
 .divspace {
-   padding-left: 150px; /* controls space between logo and menu */
+   padding-left: 200px; /* controls space between logo and menu */
 }
 
+.topspace {
+  padding: 16px 0 0 0;
+  margin: 0;
+}
 .nav-items {
     display: flex;
     list-style: none;
@@ -56,46 +59,44 @@ p {
 .servicearea {
   background-color: whitesmoke;
   display: grid;
-  grid-template-columns: 4% 20% 4% 20% 4% 20% 4% 20% 4%;
-  grid-template-rows: 2% 96% 2%;
-  padding-bottom: 25px;
-  padding-top: 25px;
+  grid-column-gap: 12.5px;
+  padding: 10px 25px 25px 25px;
 }
 
 .backbox1 {
   background-color: #fff;
   color: #444;
   border-radius: 1px;
-  grid-column: 2/3;
-  grid-row: 2/3;
-  padding: 10px;
+  grid-column: 1/2;
+  grid-row: 1;
+  padding: 25px 20px 0 20px;
 }
 
 .backbox2 {
   background-color: #fff;
   color: #444;
   border-radius: 1px;
-  grid-column: 4/5;
-  grid-row: 2/3;
-  padding: 10px;
+  grid-column: 3/4;
+  grid-row: 1;
+  padding: 25px 20px 0 20px;
 }
 
 .backbox3 {
   background-color: #fff;
   color: #444;
   border-radius: 1px;
-  grid-column: 6/7;
-  grid-row: 2/3;
-  padding: 10px;
+  grid-column: 5/6;
+  grid-row: 1;
+  padding: 25px 20px 0 20px;
 }
 
 .backbox4 {
   background-color: #fff;
   color: #444;
   border-radius: 1px;
-  grid-column: 8/9;
-  grid-row: 2/3;
-  padding: 10px;
+  grid-column: 7/8;
+  grid-row: 1;
+  padding: 25px 20px 0 20px;
 }
 
 .bigger {
@@ -105,32 +106,39 @@ p {
 .boxedtext {
   border-style: solid;
   border-width:thin;
-  border-color: black;
-  margin: 15px;
+  border-color: darkgrey;
+  margin: 24px;
+}
+
+.boxedarea {
+  border-style: solid;
+  border-width:thin;
+  border-color: darkgrey;
+  margin: 21px 0 0 0;
 }
 
 .bottomgrid {
   background-color: #fff;
   display: grid;
-  grid-template-columns: 2% 23% 2% 46% 2% 23% 2%;
-  grid-template-rows: 2% 96% 2%;
+  grid:1 1 1;
+  grid-column-gap: 10px;
   text-align: center;
+  padding-bottom: 25px;
+  height: 230px;
+
+  padding-right: 25px;
 }
 
 .pic1{
-  padding-top: 20px;
-  padding-bottom: 20px;
   grid-column: 2/3;
-  grid-row: 2/3;
 }
 
 .pic2{
+  padding-top: 20px;
   grid-column: 4/5;
-  grid-row: 2/3;
-  align-self: stretch;
 }
 
 .pic3{
+  padding-top: 20px;
   grid-column: 6/7;
-  grid-row: 2/3;
 }
